# Rust_VPN

./: .gitignore  Cargo.toml  OPTIMIZATION_LOG.md  PERFORMANCE_THEORY.md  README.md  rust-vpn-plan.md
config/: client.example.toml  server.example.toml
crates/litevpn-client/: Cargo.toml
crates/litevpn-client/src/: macos_routes.rs  main.rs
crates/litevpn-core/: Cargo.toml
crates/litevpn-core/src/: auth.rs  config.rs  crypto.rs  lib.rs  quic.rs  tun.rs
crates/litevpn-keygen/: Cargo.toml
crates/litevpn-keygen/src/: main.rs
crates/litevpn-server/: Cargo.toml
crates/litevpn-server/src/: main.rs
deploy/: litevpn-server.service
scripts/: bench-selected.sh  bench-sweep.sh  bench-vpn-throughput.sh  build-server.sh  compare-vpn-modes.sh  deploy-server.sh  install-server.sh  run-tun-smoke.sh  run-vpn-mode.sh  server-prepare.sh  server-snapshot.sh  set-vpn-transport.sh  setup-wireguard-baseline.sh  summarize-vpn-comparison.sh  sweep-wireguard-mtu.sh
