[workspace]
members = [
  "crates/litevpn-client",
  "crates/litevpn-core",
  "crates/litevpn-keygen",
  "crates/litevpn-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
bytes = "1.11"
clap = { version = "4.5", features = ["derive"] }
getrandom = "0.4"
hex = "0.4"
quinn = "0.11.11"
rcgen = "0.14.8"
rustls = "0.23"
rustls-pemfile = "2.2"
rustls-pki-types = "1.13"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal", "process", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tun-rs = { version = "2.8.5", features = ["async_tokio"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
