[package]
name = "litevpn-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
quinn.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
socket2.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tun-rs.workspace = true
