[package]
name = "litevpn-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
litevpn-core = { path = "../litevpn-core" }
quinn.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
